--- a/Project6_ternary__operators_constructors/index.html
+++ b/Project6_ternary__operators_constructors/index.html
@@ -7,12 +7,12 @@
     </head>
         <body>          <!-- Ternary operator element tied to function-->
             <p>Riders must be at least 52 centimeters tall to ride.</p>
-            <input id="Height" value="52"/>                               
+            <input id="Height" value=""/>                               
             <button onclick="Ride_Function()">Click here!</button>
             <p id="Ride"></p>
                         <!-- Self written ternary operator example tied to function-->
             <p> Voters must be over 18 years of age to vote</p>
-            <input id="Age" value = "18" />
+            <input id="Age" value = "" />
             <button onclick="Vote_Function()">Click here also!</button>
             <p id="vote"></p>
                         <!-- Constructor example replication-->
